# ng-frog-material

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  angular.json  package.json  packages.bzl  tsconfig.json  yarn.lock.4
guides/: getting-started.md
scripts/: build-docs-content.ts
src/: index.html  main.ts  styles.scss
src/app/: app.component.spec.ts
src/app/components/button/: button.md  button.ts  module.ts
src/app/showcase/domain/: appconfig.ts
src/app/showcase/layout/: app.component.ts  app.main.component.scss  app.main.component.ts  app.routes.ts
src/app/showcase/layout/doc/: app.doc.document.html  app.doc.document.ts  app.doc.html  app.doc.module.ts  (+1 more)
src/app/showcase/layout/doc-viewer/: app.doc.ts  doc-viewer.html  doc-viewer.ts
src/app/showcase/services/: appconfig.service.ts
src/dev-app/: BUILD.bazel  dev-app.ts  index.html  main.ts  routes.ts  tsconfig.json
src/dev-app/button/: button-demo.html  button-demo.ts
src/dev-app/layout/: layout.html  layout.ts
src/material/button/: button-base.ts  button.html  button.scss  button.ts  module.ts  public-api.ts  variables.scss
src/material/core/elevation/: elevation.scss  elevation.ts  variables.scss
src/material/core/ripple/: module.ts  ripple-renderer.ts  ripple.html  ripple.scss  ripple.ts  variables.scss
src/material/list/: list.module.ts  list.ts  nav-list.ts  public-api.ts
src/material/ripple/: ripple.ts
src/material/sidenav/: public-api.ts  sidenav-container.html  sidenav.module.ts  sidenav.ts
tools/: defaults.bzl
tools/markdown-to-html/: transform-markdown.ts  tsconfig.json
(+26 files in other folders)
